--- a/testing/runner/Views/Main/RunSuite.cshtml
+++ b/testing/runner/Views/Main/RunSuite.cshtml
@@ -157,7 +157,8 @@
                     // SystemJS plugins
                     'css': '@Url.Content("~/node_modules/systemjs-plugin-css/css.js")',
                     'text': '@Url.Content("~/node_modules/systemjs-plugin-text/text.js")',
-                    'json': '@Url.Content("~/node_modules/systemjs-plugin-json/json.js")'
+                    'json': '@Url.Content("~/node_modules/systemjs-plugin-json/json.js")',
+                    'Babel': '@Url.Content("~/node_modules/babel-standalone/babel.js")'
                 },
                 packages: {
                     '': {
